Fixed relative path sources

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<title>Lab Two - Journal Entries</title>
-	<link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-	<link rel="manifest" href="/favicon_io/site.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+	<link rel="manifest" href=",/favicon_io/site.webmanifest">
 	<meta charset="utf-8">
 </head>
 <body>
@@ -36,7 +36,7 @@
 		</ul>
 		<h3>What else happened today</h3>
 		<p>Tachii turned three years old. Here's a picture of him being adorable (: .</p>
-		<img src="/pictures/IMG_2265.jpg">
+		<img src="./pictures/IMG_2265.jpg">
 	</section>
 	<hr>
 	<section id="journal_040821">
@@ -50,7 +50,7 @@
 		<h3>What else happened today</h3>
 		<p>Found a great video on Bayesian parameter estimation.</p>
 		<video controls>
-			<source src="/video/Bayes Estimation.mp4" type="video/mp4">
+			<source src="./video/Bayes Estimation.mp4" type="video/mp4">
 		</video>
 	</section>
 	<hr>
@@ -68,7 +68,7 @@
 		<p>My girlfriend made a song recently. It sounds pretty good so I thought I'd share it here.</p>
 		<figure>
 			<figcaption>Diana's song, still unnamed.</figcaption>
-			<audio controls src="/audio/coffee grounds.mp3">Audio element not supported.</audio>
+			<audio controls src="./audio/coffee grounds.mp3">Audio element not supported.</audio>
 		</figure>
 	</section>
 	<hr>
