Fixed changes from W3 validator

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</ul>
 		<h3>What else happened today</h3>
 		<p>Tachii turned three years old. Here's a picture of him being adorable (: .</p>
-		<img src="./pictures/IMG_2265.jpg">
+		<img src="./pictures/IMG_2265.jpg" alt="A picture of Tachii">
 	</section>
 	<hr>
 	<section id="journal_040821">
@@ -50,7 +50,7 @@
 		<h3>What else happened today</h3>
 		<p>Found a great video on Bayesian parameter estimation.</p>
 		<video controls>
-			<source src="./video/Bayes Estimation.mp4" type="video/mp4">
+			<source src="./video/Bayes%20Estimation.mp4" type="video/mp4">
 		</video>
 	</section>
 	<hr>
@@ -68,7 +68,7 @@
 		<p>My girlfriend made a song recently. It sounds pretty good so I thought I'd share it here.</p>
 		<figure>
 			<figcaption>Diana's song, still unnamed.</figcaption>
-			<audio controls src="./audio/coffee grounds.mp3">Audio element not supported.</audio>
+			<audio controls src="./audio/coffee%20grounds.mp3">Audio element not supported.</audio>
 		</figure>
 	</section>
 	<hr>
