Added sticky header

--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<header>Lab Two - Journal Entries for 4/7/21-4/9/21</header>
+	<div id="page_nav">
+		<header>Lab Two - Journal Entries for 4/7/21-4/9/21</header>
 
-	<details>
-		<summary>Table of Contents</summary>
-		<nav id="entries">
-			<ol>
-				<li><a href="#journal_040721">Journal 4/7/21</a></li>
-				<li><a href="#journal_040821">Journal 4/8/21</a></li>
-				<li><a href="#journal_040921">Journal 4/9/21</a></li>
-			</ol>
-		</nav>
-	</details>
+		<details>
+			<summary>Table of Contents</summary>
+			<nav id="entries">
+				<ol>
+					<li><a href="#journal_040721">Journal 4/7/21</a></li>
+					<li><a href="#journal_040821">Journal 4/8/21</a></li>
+					<li><a href="#journal_040921">Journal 4/9/21</a></li>
+				</ol>
+			</nav>
+		</details>
+	</div>
 	<hr>
 	<main>
 	<h1>Journals</h1>
