--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
 	<link rel="manifest" href="./favicon_io/site.webmanifest">
 	<link rel="stylesheet" href="css/style.css">
+
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
 	<meta charset="utf-8">
+
+	<style>
+		* {
+			font-family: 'Lato', sans-serif;;
+		}
+	</style>
 </head>
 <body>
 	<div id="page_nav">
-		<header>Lab Two - Journal Entries for 4/7/21-4/9/21</header>
+		<header style="font-weight: bolder;">Lab Two - Journal Entries for 4/7/21-4/9/21</header>
 
 		<details>
 			<summary>Table of Contents</summary>
